--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,65 +1,102 @@
 {
-    "cSpell.words": [
-        "chromedriver",
-        "siguient"
-    ],
-    "cSpell.enableFiletypes": [
-        "Log",
-        "aspnetcorerazor",
-        "bat",
-        "bibtex",
-        "clojure",
-        "cmake",
-        "cmake-cache",
-        "code-runner-output",
-        "code-text-binary",
-        "coffeescript",
-        "copilotignore",
-        "cpp_embedded_latex",
-        "csv",
-        "cuda-cpp",
-        "dart",
-        "dbscheme",
-        "diff",
-        "dll",
-        "dnszonefile",
-        "dockercompose",
-        "dockerfile",
-        "editorconfig",
-        "excel",
-        "git-rebase",
-        "ini",
-        "java-properties",
-        "jinja",
-        "jsx-tags",
-        "julia",
-        "lldb.disassembly",
-        "log",
-        "lua",
-        "makefile",
-        "markdown-math",
-        "markdown_latex_combined",
-        "nupkg",
-        "objective-c",
-        "objective-cpp",
-        "pip-requirements",
-        "plist",
-        "powershell",
-        "properties",
-        "ql",
-        "raw",
-        "ruby",
-        "run-output",
-        "sass",
-        "search-result",
-        "shellscript",
-        "sql",
-        "ssh_config",
-        "tex",
-        "tsv",
-        "vb",
-        "xml",
-        "xsl",
-        "zip"
-    ]
+  "cSpell.words": [
+    "chromedriver",
+    "siguient"
+  ],
+  "cSpell.enableFiletypes": [
+    "Log",
+    "aspnetcorerazor",
+    "bat",
+    "bibtex",
+    "clojure",
+    "cmake",
+    "cmake-cache",
+    "code-runner-output",
+    "code-text-binary",
+    "coffeescript",
+    "copilotignore",
+    "cpp_embedded_latex",
+    "csv",
+    "cuda-cpp",
+    "dart",
+    "dbscheme",
+    "diff",
+    "dll",
+    "dnszonefile",
+    "dockercompose",
+    "dockerfile",
+    "editorconfig",
+    "excel",
+    "git-rebase",
+    "ini",
+    "java-properties",
+    "jinja",
+    "jsx-tags",
+    "julia",
+    "lldb.disassembly",
+    "log",
+    "lua",
+    "makefile",
+    "markdown-math",
+    "markdown_latex_combined",
+    "nupkg",
+    "objective-c",
+    "objective-cpp",
+    "pip-requirements",
+    "plist",
+    "powershell",
+    "properties",
+    "ql",
+    "raw",
+    "ruby",
+    "run-output",
+    "sass",
+    "search-result",
+    "shellscript",
+    "sql",
+    "ssh_config",
+    "tex",
+    "tsv",
+    "vb",
+    "xml",
+    "xsl",
+    "zip"
+  ],
+  "C_Cpp_Runner.cCompilerPath": "gcc",
+  "C_Cpp_Runner.cppCompilerPath": "g++",
+  "C_Cpp_Runner.debuggerPath": "gdb",
+  "C_Cpp_Runner.cStandard": "",
+  "C_Cpp_Runner.cppStandard": "",
+  "C_Cpp_Runner.msvcBatchPath": "",
+  "C_Cpp_Runner.useMsvc": false,
+  "C_Cpp_Runner.warnings": [
+    "-Wall",
+    "-Wextra",
+    "-Wpedantic",
+    "-Wshadow",
+    "-Wformat=2",
+    "-Wconversion",
+    "-Wnull-dereference",
+    "-Wsign-conversion"
+  ],
+  "C_Cpp_Runner.enableWarnings": true,
+  "C_Cpp_Runner.warningsAsError": false,
+  "C_Cpp_Runner.compilerArgs": [],
+  "C_Cpp_Runner.linkerArgs": [],
+  "C_Cpp_Runner.includePaths": [],
+  "C_Cpp_Runner.includeSearch": [
+    "*",
+    "**/*"
+  ],
+  "C_Cpp_Runner.excludeSearch": [
+    "**/build",
+    "**/build/**",
+    "**/.*",
+    "**/.*/**",
+    "**/.vscode",
+    "**/.vscode/**"
+  ],
+  "C_Cpp_Runner.useAddressSanitizer": false,
+  "C_Cpp_Runner.showCompilationTime": false,
+  "compile-hero.disable-compile-files-on-did-save-code": false
 }
