--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -60,6 +60,12 @@
           "ignoreFailures": true
         }
       ]
+    },
+    {
+      "type": "node-terminal",
+      "name": "JavaScript Debug Terminal",
+      "request": "launch",
+      "cwd": "${workspaceFolder}"
     }
   ]
 }
