--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -99,5 +99,6 @@
   ],
   "C_Cpp_Runner.useAddressSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
-  "compile-hero.disable-compile-files-on-did-save-code": false
+  "compile-hero.disable-compile-files-on-did-save-code": false,
+  "python.analysis.typeCheckingMode": "basic"
 }
